# droidgear

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
locales/: en.json  zh.json
scripts/: create-portable-update-manifest.js  prepare-release.js  tauri-dev.sh  tui-dev.sh
src/: App.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/crates/droidgear-core/: Cargo.toml
src-tauri/crates/droidgear-core/src/: channel.rs  channel_export.rs  claude.rs  claude_runtime.rs  claude_settings_files.rs  codex.rs  codex_runtime.rs  droid_runtime.rs  droid_settings_files.rs  factory_auth_profiles.rs  factory_settings.rs  hermes.rs  lib.rs  openclaw.rs  paths.rs  pi.rs  zed.rs
src-tauri/crates/droidgear-core/src/cdp/: connection.rs  injection.rs  mod.rs
src-tauri/crates/droidgear-core/tests/: characterization.rs
src-tauri/crates/droidgear-tui/: Cargo.toml
src-tauri/crates/droidgear-tui/src/: app.rs  main.rs  tui.rs  ui.rs
src-tauri/crates/droidgear-tui/src/tui/: actions.rs  keys_channels.rs  keys_claude.rs  keys_codex.rs  keys_droid_settings.rs  keys_factory.rs  keys_factory_auth.rs  keys_hermes.rs  keys_main.rs  keys_mcp.rs  keys_missions.rs  keys_openclaw.rs  keys_opencode.rs  keys_paths.rs  keys_pi.rs  keys_sessions.rs  keys_specs.rs  mod.rs  modal.rs  refresh.rs  tests.rs  utils.rs
(+189 files in other folders)
