[package]
name = "droidgear-core"
version = "0.0.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow = "1"
chrono = "0.4"
dirs = "5"
json_comments = "0.2"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time", "rt", "process"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
